fix nav spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -459,6 +459,13 @@ nav.header {
 .breadcrumbs {
   display: inline-block;
   margin-left: var(--spacing-small);
+    line-height: 1.3;
+}
+
+@media (max-width: 600px) {
+    .breadcrumbs {
+        line-height: 1.8;
+    }
 }
 
 .breadcrumbs a.link {
